# paydirect-signing-examples

./: .gitignore  Dockerfile.openssl  LICENSE  README.md  docker_generate_key_pair.sh  generate_key_pair.sh  payload.json
.circleci/: config.yml  test-verify
csharp/: README.md  csharp.sln
csharp/sign/: README.md
csharp/src/: Program.Options.cs  Program.cs  signing.csproj
csharp/verify/: README.md  verify-webhook.csproj
csharp/verify/src/: Program.Options.cs  Program.cs
java/: .gitignore  README.md  build.gradle  settings.gradle
java/sign/: build.gradle
java/src/main/java/signing/: App.java  RequestSigner.java
java/src/test/java/signing/: AppTest.java
java/verify/: build.gradle
java/verify/src/main/java/verify/: App.java  WebhookVerifier.java
javascript/: README.md  package-lock.json  package.json  payload.txt
javascript/sign/: README.md  package-lock.json  package.json
javascript/sign/src/: main.js
javascript/verify/: README.md  package-lock.json  package.json
javascript/verify/src/: main.js
python/: Pipfile  README.md  verify.py
rust/: Cargo.toml  README.md
rust/sign/: Cargo.toml  README.md
rust/sign/src/: main.rs
rust/src/: main.rs
rust/verify/: Cargo.toml  README.md
rust/verify/src/: main.rs  verify_webhook.rs
typescript/: README.md  package-lock.json  package.json
typescript/sign/: README.md  package-lock.json  package.json  tsconfig.json
typescript/sign/src/: main.ts
typescript/verify/: README.md  package-lock.json  package.json
typescript/verify/src/: main.ts
