[package]
name = "signing"
version = "0.1.0"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.12"
clap = "3.0.0-beta.1"
anyhow = "1.0.32"
uuid = "0.8.1"
reqwest = "*"
tokio = { version = "*", features = ["full"]}