[package]
name = "signing"
version = "0.1.0"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"
publish = false

[dependencies]
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.13"
clap = { version = "3", features = ["derive"] }
anyhow = "1.0.32"
uuid = "0.8.1"
