[package]
name = "verify-webhook"
version = "0.1.0"
authors = ["Alex Butler <alex.butler@truelayer.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.13"
clap = { version = "3", features = ["derive"] }
anyhow = "1.0.32"
picky = "6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
